istio-yaml/gateway.yaml
##################################################################################################
# mis-a gateway
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: misa-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misa
spec:
  hosts:
  - "*"
  gateways:
  - misa-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /return200
    - uri:
        exact: /return400
    - uri:
        exact: /return500
    - uri:
        exact: /flowone
    - uri:
        exact: /flowfour
    - uri:
        exact: /flowfive
    route:
    - destination:
        host: misa
        port:
          number: 3000
---
##################################################################################################
# mis-b gateway
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: misb-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misb
spec:
  hosts:
  - "*"
  gateways:
  - misb-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /return200
    - uri:
        exact: /return400
    - uri:
        exact: /return500
    - uri:
        exact: /flowone
    - uri:
        exact: /flowfour
    - uri:
        exact: /flowfive
    route:
    - destination:
        host: misb
        port:
          number: 3000
---
##################################################################################################
# mis-c gateway
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: misc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misc
spec:
  hosts:
  - "*"
  gateways:
  - misc-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /return200
    - uri:
        exact: /return400
    - uri:
        exact: /return500
    - uri:
        exact: /flowone
    - uri:
        exact: /flowfour
    - uri:
        exact: /flowfive
    route:
    - destination:
        host: misc
        port:
          number: 3000
---
##################################################################################################
# mis-d gateway
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: misd-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misd
spec:
  hosts:
  - "*"
  gateways:
  - misd-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /return200
    - uri:
        exact: /return400
    - uri:
        exact: /return500
    - uri:
        exact: /flowone
    - uri:
        exact: /flowfour
    - uri:
        exact: /flowfive
    route:
    - destination:
        host: misd
        port:
          number: 3000
---
