istio-yaml/gateway_mis.yaml

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misa
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /misa/
    rewrite:
      uri: /
    route:
    - destination:
        host: misa
        port:
          number: 3000

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misb
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /misb/
    rewrite:
      uri: /
    route:
    - destination:
        host: misb
        port:
          number: 3001

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: misd
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /misd/
    rewrite:
      uri: /
    route:
    - destination:
        host: misd
        port:
          number: 3003
